force-app/main/default/objects/SteelGrade__c/fields/NameLen__c.field-meta.xml
<CustomField>
    <fullName>NameLen__c</fullName>
    <formula>LEN(Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameLen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>