force-app/main/default/objects/SteelGrade__c/fields/NameRus__c.field-meta.xml
<CustomField>
    <fullName>NameRus__c</fullName>
    <description>Name of steel grade in Russian.</description>
    <inlineHelpText>Name of steel grade in Russian.</inlineHelpText>
    <label>Steel Grade Name (Rus)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>