force-app/main/default/objects/SteelGrade__c/fields/Obsolete__c.field-meta.xml
<CustomField>
    <fullName>Obsolete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>