force-app/main/default/objects/SteelGrade__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <description>Short name of steel grade.</description>
    <inlineHelpText>Short name of steel grade.</inlineHelpText>
    <label>Short Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>