force-app/main/default/objects/SteelGrade__c/fields/SteelGradeGroup__c.field-meta.xml
<CustomField>
    <fullName>SteelGradeGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Steel Grade Group</label>
    <referenceTo>SteelGradeGroup__c</referenceTo>
    <relationshipLabel>Steel Grades</relationshipLabel>
    <relationshipName>Steel_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>